--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -7,9 +7,18 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver       # mysql 驱动包
-    url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://124.71.200.219:3306/springcloud?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: fs341225
+
+eureka:
+  client:
+    # 表示是否将自己注册进eureka server 默认为true
+    register-with-eureka: true
+    # 是否从eureka抓取已有的注册信息, 默认为true, 单节点无所谓, 集群必须设置为true才能使用ribbon负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
