--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -18,7 +18,7 @@ eureka:
     # 是否从eureka抓取已有的注册信息, 默认为true, 单节点无所谓, 集群必须设置为true才能使用ribbon负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka,http://eureka7003.com:7003/eureka
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
