--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>clould-consumer-order80</module>
         <module>cloud-common-api</module>
         <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-eureka-server7003</module>
     </modules>
 
     <packaging>pom</packaging>
