--- a/clould-consumer-order80/src/main/resources/application.yml
+++ b/clould-consumer-order80/src/main/resources/application.yml
@@ -11,7 +11,7 @@ eureka:
     # 是否从eureka抓取已有的注册信息, 默认为true, 单节点无所谓, 集群必须设置为true才能使用ribbon负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka7001.com:7001/,http://eureka7002.com:7002/,http://eureka7003.com:7003/
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka,http://eureka7003.com:7003/eureka
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
