--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-provider-payment8002</module>
         <module>clould-consumer-order80</module>
         <module>cloud-common-api</module>
         <module>cloud-eureka-server7001</module>
