--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -11,3 +11,8 @@ eureka:
     service-url:
       #设置与eureka交互的地址地址查询服务和注册服务都依赖这个地址
       defaultZone: http://eureka7002.com:7002/eureka
+  #server:
+    # 关闭自我保护机制
+    #enable-self-preservation: false
+    # 心跳时长
+    #eviction-interval-timer-in-ms: 2000
