--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -22,6 +22,10 @@ eureka:
   instance:
     instance-id: payment8001
     prefer-ip-address: true
+    # eureka 客户端向服务端发送心跳的间隔, 默认是30秒
+    #lease-renewal-interval-in-seconds: 20
+    # eureka 服务端在收到客户端最后一次心跳后等待的时间上限  超时剔除服务
+    #lease-expiration-duration-in-seconds: 90
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.start.springcloud.entities    # 所有Entity别名类所在包
