--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>cloud-eureka-server7002</module>
         <module>cloud-eureka-server7003</module>
         <module>cloud-provider-payment8004</module>
+        <module>clould-consumerzk-order8080</module>
+        <module>cloud-provider-consul-payment8005</module>
+        <module>clould-consumer-consul-order8081</module>
     </modules>
 
     <packaging>pom</packaging>
